Tue Jan 03 19:13:05 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/rexml/test_sax.rb: add require 'rexml/document'.
	  [Backport #5834] [ruby-dev:45079]

Tue Jan  3 19:05:42 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/defines.h (FLUSH_REGISTER_WINDOWS): move sparc asm code
	  to a separete file sparc.c for preventing inlining optimization.
	  Patched by Jurij Smakov. [Bug #5244] [ruby-core:40685]
	* sparc.c (rb_sparc_flush_register_windows): ditto.
	* configure.in: ditto.

Mon Jan  2 23:52:20 2012  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c (Init_readline): libedit check
	  rl_getc_function only when rl_initialize() is called, and
	  using_history() call rl_initialize(). This assignment should be
	  placed before using_history(). [ruby-core:40641] [Bug #5539]

Mon Jan  2 23:47:58 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (install_recursive, bin-comm): split mere
	  string not path name.  [ruby-core:40462] [Bug #5492]

Mon Jan  2 23:41:57 2012  Tajima Akil <artonx@yahoo.co.jp>

	* win32/Makefile.sub (CONFIG_H): have stdint.h if VC2010.
	  [Bug #5243]

Mon Jan  2 21:40:45 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* tool/merger.rb (#version_up): version.h date should be Japanese
	  locale date.

Mon Jan  2 21:36:56 2012  Luis Lavena  <luislavena@gmail.com>

	* configure.in: check -fno-omit-frame-pointer acceptance and usage
	  under MinGW. [ruby-core:39957] [Bug #5407]

Mon Jan  2 20:05:10 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h (SIZE_MAX): define SIZE_MAX if not defined.
	  patched by The Written Word Inc. [ruby-core:40422] [Bug #5489]

Mon Jan  2 20:00:01 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (pty_check): should return nil until the child
	  terminates or stops.  [ruby-dev:44600] [Bug #2642]

Mon Jan  2 19:27:18 2012  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (update_coverage): skip coverage count up if the current